force-app/main/default/objects/Lead/fields/Benefice_attendus__c.field-meta.xml
<CustomField>
    <fullName>Benefice_attendus__c</fullName>
    <label>Bénéfice attendus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Augmentation de vos ventes</fullName>
            </value>
            <value>
                <fullName>Amélioration des vos marges, rentabilité, profitabilité</fullName>
            </value>
            <value>
                <fullName>Baisse des coûts</fullName>
            </value>
            <value>
                <fullName>Une meilleur qualité de services</fullName>
            </value>
            <value>
                <fullName>Une meilleur motivation des salariés</fullName>
            </value>
            <value>
                <fullName>Développer les compétences de vos salariés</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>