force-app/main/default/objects/Lead/fields/Besoins_specifiques__c.field-meta.xml
<CustomField>
    <fullName>Besoins_specifiques__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Besoins spécifiques</label>
    <type>Checkbox</type>
</CustomField>