force-app/main/default/objects/Lead/fields/conseiller_formation__c.field-meta.xml
<CustomField>
    <fullName>conseiller_formation__c</fullName>
    <label>conseiller(e) formation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mehdi</fullName>
            </value>
            <value>
                <fullName>Abdel</fullName>
            </value>
            <value>
                <fullName>Amel</fullName>
            </value>
            <value>
                <fullName>Ayoub</fullName>
            </value>
            <value>
                <fullName>Aziz</fullName>
            </value>
            <value>
                <fullName>Faten</fullName>
            </value>
            <value>
                <fullName>Olfa</fullName>
            </value>
            <value>
                <fullName>Rachid</fullName>
            </value>
            <value>
                <fullName>Wafa</fullName>
            </value>
            <value>
                <fullName>Zohra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>