force-app/main/default/objects/Lead/fields/Date_souhaite__c.field-meta.xml
<CustomField>
    <fullName>Date_souhaite__c</fullName>
    <label>Date souhaité</label>
    <type>TextArea</type>
</CustomField>