force-app/main/default/objects/Lead/fields/EmailOnNewSent__c.field-meta.xml
<CustomField>
    <fullName>EmailOnNewSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email On New Sent</label>
    <type>Checkbox</type>
</CustomField>