force-app/main/default/objects/Lead/fields/Intra_inter__c.field-meta.xml
<CustomField>
    <fullName>Intra_inter__c</fullName>
    <label>Intra/ inter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Une formation en intra-entreprise (formation délivrée exclusivement à vous)</fullName>
            </value>
            <value>
                <fullName>Une formation en inter-entreprise (formation qui réunit plusieurs entreprise)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>