force-app/main/default/objects/Lead/fields/Lieux_formation__c.field-meta.xml
<CustomField>
    <fullName>Lieux_formation__c</fullName>
    <label>Lieux de la formation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Au Kremlin Bicêtre dans les locaux de Des-Click formation</fullName>
            </value>
            <value>
                <fullName>Dans vos locaux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>