force-app/main/default/objects/Lead/fields/Num_SIREN__c.field-meta.xml
<CustomField>
    <fullName>Num_SIREN__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Système d&apos;identification du répertoire des entreprises. Il est composé de 9 chiffres</inlineHelpText>
    <label>Numéro de SIREN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>