force-app/main/default/objects/Lead/fields/Opco__c.field-meta.xml
<CustomField>
    <fullName>Opco__c</fullName>
    <label>Opco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AKTO</fullName>
            </value>
            <value>
                <fullName>OPCO - entreprise de proximité</fullName>
            </value>
            <value>
                <fullName>ADFAS</fullName>
            </value>
            <value>
                <fullName>ATLAS</fullName>
            </value>
            <value>
                <fullName>UNIFORMATION</fullName>
            </value>
            <value>
                <fullName>OCAPIAT</fullName>
            </value>
            <value>
                <fullName>2I</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION</fullName>
            </value>
            <value>
                <fullName>MOBILITES</fullName>
            </value>
            <value>
                <fullName>SANTE</fullName>
            </value>
            <value>
                <fullName>OPCOMMERCE</fullName>
            </value>
            <value>
                <fullName>AGIFICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>