force-app/main/default/objects/Lead/fields/Raison_Formation__c.field-meta.xml
<CustomField>
    <fullName>Raison_Formation__c</fullName>
    <label>Raison de Formation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Difficulté économique</fullName>
            </value>
            <value>
                <fullName>Mieux mesurer la performance de votre activité</fullName>
            </value>
            <value>
                <fullName>Mutations technologiques (Digitalisation)</fullName>
            </value>
            <value>
                <fullName>Développez vos ventes</fullName>
            </value>
            <value>
                <fullName>Mieux gérer la clientèle</fullName>
            </value>
            <value>
                <fullName>la règlementation (obligation légale : sécurité, hygiène, allergènes....)</fullName>
            </value>
            <value>
                <fullName>Assurer une meilleur qualité et d&apos;hygiène</fullName>
            </value>
            <value>
                <fullName>Développer les compétences de vos salariés</fullName>
            </value>
            <value>
                <fullName>Favoriser la mobilité et les promotions internes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>